<resources>
    <string name="app_name">Total Service Pro</string>
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_manuals">Manuals</string>
    <string name="nav_reports">Reports</string>
    <string name="nav_calc">Tools</string>
    <string name="nav_fluence">Fluence</string>
    <string name="nav_irradiance">Irradiance</string>
    <string name="nav_wavelength">Wavelength</string>
    <string name="nav_duty_cycle">Duty Cycle</string>
    <string name="nav_avg_power">Avg Power</string>
    <string name="nav_service">Service</string>
</resources>
