<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_service"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_fluence"
        android:title="@string/nav_schedule" />

    <item
        android:id="@+id/nav_manuals"
        android:icon="@drawable/ic_manual"
        android:title="@string/nav_manuals" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_service"
        android:title="@string/nav_reports" />

    <item
        android:id="@+id/nav_calc"
        android:icon="@drawable/ic_avg_power"
        android:title="@string/nav_calc" />

</menu>
